# truvade

./: .env.example  package-lock.json  package.json
src/app/: error.tsx  (+2 more)
truvade-backend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
truvade-backend/.github/workflows/: ci.yml  deploy.yml
truvade-backend/accounts/: admin.py  emails.py  models.py
truvade-backend/accounts/domain/: selectors.py  services.py
truvade-backend/accounts/migrations/: 0001_initial.py  0002_add_otp_model.py  0003_identityverification_invitation_ownerhostmembership.py  0004_alter_identityverification_verification_type.py  0005_user_address_user_bio_user_emergency_contact_and_more.py
truvade-backend/accounts/tests/: conftest.py  test_models.py  test_selectors.py  test_services.py  test_views.py
truvade-backend/bookings/: admin.py  models.py
truvade-backend/bookings/domain/: selectors.py  services.py
truvade-backend/bookings/migrations/: 0001_initial.py  0002_booking_host_commission_percentage_and_more.py  0003_booking_cohost_commission_percentage_and_more.py
truvade-backend/core/: settings.py  urls.py
truvade-backend/messaging/: admin.py  models.py
truvade-backend/notifications/: admin.py  models.py
truvade-backend/organizations/: admin.py  models.py
truvade-backend/payments/: admin.py  models.py
truvade-backend/properties/: admin.py  models.py
truvade-backend/reviews/: admin.py  models.py
truvade-backend/shortlet/: admin.py  apps.py  models.py
truvade-backend/wishlists/: admin.py  models.py
(+279 files in other folders)
